# luce-bench

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/lucebench/: __init__.py  cli.py  probe.py  report.py  runner.py
src/lucebench/areas/: __init__.py  agent.py  ds4_eval.py  forge.py  humaneval.py  longctx.py
src/lucebench/fixtures/: ds4_eval_cases.json
src/lucebench/fixtures/agent_cases/: cases.json
src/lucebench/fixtures/forge_eval/: README.md  __init__.py  ablation.py  eval_runner.py
src/lucebench/fixtures/forge_eval/_forge/: __init__.py  errors.py  server.py
src/lucebench/fixtures/forge_eval/_forge/clients/: __init__.py  anthropic.py  base.py
src/lucebench/fixtures/forge_eval/_forge/context/: __init__.py  hardware.py  manager.py  strategies.py
src/lucebench/fixtures/forge_eval/_forge/core/: __init__.py  inference.py  messages.py  runner.py  steps.py  workflow.py
src/lucebench/fixtures/forge_eval/_forge/guardrails/: __init__.py  error_tracker.py  guardrails.py  nudge.py  response_validator.py  step_enforcer.py
src/lucebench/fixtures/forge_eval/_forge/prompts/: __init__.py  nudges.py  templates.py
src/lucebench/fixtures/forge_eval/scenarios/: __init__.py  _base.py  _compaction.py  _compaction_chain.py  _model_quality.py  _model_reasoning.py  _plumbing.py  _stateful_model_quality.py  _stateful_model_reasoning.py  _stateful_plumbing.py  _stateful_relevance.py
src/lucebench/fixtures/humaneval/: cases.json
tests/: conftest.py  test_fixtures.py  test_runner.py  test_smoke_end_to_end.py
